--- a/public/dnow.css
+++ b/public/dnow.css
@@ -1,7 +1,7 @@
 body {
 	position: relative;
 	background: #000 url('images/bg.jpg') top center fixed no-repeat;
-	color: #333;
+	color: #fff;
 }
 
 .container{
