--- a/public/dnow.css
+++ b/public/dnow.css
@@ -36,6 +36,10 @@ div.schedule iframe {
 	margin-left: 75px;
 }
 
+div.schedule a {
+	margin-left: 75px;
+}
+
 section.replay-content{
 	margin-top:20px;
 }
