--- a/public/dnow.css
+++ b/public/dnow.css
@@ -15,8 +15,24 @@ section.header-content{
 	margin-top: 15px;
 }
 
+section.header-content div.twitter {
+	margin-top: 30px;
+}
+
+section.header-content div.facebook {
+	margin-top: 30px;
+}
+
 section.video-content{
 	margin-top:20px;
+}
+
+section.video-content h1{
+	margin-top:40px;
+	color: #fff;
+	background-color: #000;
+	font-size: 55px;
+	line-height: 1.5em;
 }
 
 div.video {
