--- a/public/dnow.css
+++ b/public/dnow.css
@@ -1,3 +1,69 @@
+body {
+  position: relative;
+  background: #fff;
+  color: #000;
+}
+
+.container{
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  zoom: 1;
+}
+
+section.header-content{
+  margin-top: 15px;
+}
+
+section.video-content{
+  margin-top:20px;
+}
+
+/*div.video {
+  background: #000 url('images/player.png') no-repeat;
+}*/
+
+div#mediaplayer_wrapper{
+  margin-top: 5px;
+}
+
+div.schedule img{
+  margin-left: 70px;
+  height:370px;
+}
+
+section.replay-content{
+  margin-top:20px;
+}
+
+div#clock{
+  margin-top: 5px;
+  background: #000;
+  height:75px;
+}
+
+div.clock-content{
+  padding:10px;
+  color:#fff;
+}
+
+div.clock-content span{
+  margin-left:30px;
+  margin-right:30px;
+  font-size: 50px;
+  font-weight: bold;
+  vertical-align:middle;
+}
+
+div.clock-content img.live{
+  height:30px;
+  margin-left:15px;
+}
+
+footer{
+  margin-top:20px;
+}
+
 /*!
 Theme Name: Dnow "The Name"
 Theme URI: http://dnow13.com
